--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -332,6 +332,44 @@
 } 
 
 
+.olive-animation {
+
+  margin-top: 26vmin;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 26vmin;
+  
+}
+
+.hand-olive {
+
+  height: 46vmin;
+  position: absolute;
+  
+}
+
+.stick-olive {
+  height: 46vmin;
+  position: absolute;
+  
+}
+
+@keyframes stick { 
+
+0%   {transform: rotate(0deg);}
+100% {transform: rotate(-7deg);}
+
+}
+
+.stick-olive {
+
+  animation: stick 0.8s infinite ease-in;
+  animation-direction: alternate;
+} 
+
+
 .search-container {
 
   display: flex;
@@ -1123,7 +1161,8 @@ margin-bottom: 1vmin;
 
 .account-subtitle {
   margin-top: 5vmin;
-  margin-bottom: 3vmin
+  margin-bottom: 3vmin;
+  margin-left: 2vmin;
 }
 
 .avatar {
@@ -1396,6 +1435,7 @@ padding-top: 4vmin;
 /*  START BOOK screen*/
 .grid-container-book {
   padding-top: 3vmin;
+  margin-left: 2vmin;
   display: grid;
   align-items: center;
   grid-template-columns: 60vmin 20vmin 20vmin 20vmin;
