--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -358,8 +358,8 @@
 
 @keyframes stick { 
 
-0%   {transform: rotate(0deg);}
-100% {transform: rotate(-7deg);}
+0%   {transform: rotate(4deg);}
+100% {transform: rotate(-3deg);}
 
 }
 
@@ -896,6 +896,7 @@ margin-bottom: 1vmin;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 2vmin;
 }
 
 .card_div_rate {
@@ -1084,7 +1085,7 @@ margin-bottom: 1vmin;
 }
 
 .sleep {
-  height: 30vmin;
+  height: 33vmin;
   padding-top: 5vmin;
   padding-bottom: 3vmin;
 }
@@ -1094,13 +1095,13 @@ margin-bottom: 1vmin;
       -webkit-transform: rotate(0deg);
   }
   to{
-      -webkit-transform: rotate(4.4deg);
+      -webkit-transform: rotate(5deg);
   }
 }
 
 .sleep {
   transform-origin: 80% 80%;
-  animation: rotating 3s infinite;
+  animation: rotating 2.8s infinite;
   animation-direction: alternate;
 }
 
@@ -1132,21 +1133,53 @@ margin-bottom: 1vmin;
 .my-account-main {
 
   display: flex;
+  justify-content: space-between;
+
+}
+
+.log-out {
+   
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 8vmin;
+  width: 8vmin;
+  background-color: #E0DCDC;
+  border-radius: 50%;
+
+}
+
+.my-account-title {
+
+  display: flex;
+  align-items: center;
+
+
 }
 
 .my-account {
 
   padding-left: 2vmin;
   padding-top: 4vmin;
-  padding-bottom: 8vmin;
-  width: 50%;
+  padding-bottom: 4vmin;
+  
+}
+
+.my-information-title {
+
+  display: flex;
+  align-items: center;
+
+
 }
 
 .my-avatar {
 
+  padding-left: 2vmin;
+  display: flex;
+  flex-direction: column;
   padding-top: 4vmin;
-  width: 50%;
-
+  
 }
 
 .my-password {
@@ -1167,14 +1200,22 @@ margin-bottom: 1vmin;
 
 .grid-item {
   margin-bottom: 2vmin;
-  font-size: 13px
+  font-size: 2vmin
+}
+
+
+.reservations {
+
+  margin-left: 2vmin;
+  margin-bottom: 10vmin;
+
 }
 
 
 @media only screen and (max-width: 576px) {
 
   .grid-item {
-    font-size: 10px;
+    font-size: 2vmin;
   }
 }
 
@@ -1192,20 +1233,21 @@ margin-bottom: 1vmin;
 }
 
 .account-subtitle {
-  margin-top: 5vmin;
+  
   margin-bottom: 3vmin;
   margin-left: 2vmin;
 }
 
 .avatar {
   display: flex;
-  justify-content: space-between;
-  margin-top: 4vmin;
-  margin-bottom: 4vmin
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 6vmin;
+  margin-bottom: 4vmin;
 }
 
 .picto-portrait {
-  height: 25vmin ;
+  height: 20vmin ;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1216,8 +1258,8 @@ margin-bottom: 1vmin;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 22vmin;
-  width: 22vmin;
+  height: 18vmin;
+  width: 18vmin;
   background-color: #E0DCDC;
   border-radius: 50%;
 }
@@ -1256,8 +1298,8 @@ margin-bottom: 1vmin;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 29vmin;
-  width: 29vmin;
+  height: 24vmin;
+  width: 24vmin;
   background-color:  #d0c3c3;
   border-radius: 50%;
 }
@@ -1270,8 +1312,8 @@ margin-bottom: 1vmin;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 29vmin;
-  width: 29vmin;
+  height: 24vmin;
+  width: 24vmin;
   background-color: #B5ACAC;
   border-radius: 50%;
 }
@@ -1285,8 +1327,8 @@ margin-bottom: 1vmin;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 29vmin;
-  width: 29vmin;
+  height: 24vmin;
+  width: 24vmin;
   background-color: #E0DCDC;
   border-radius: 50%;
 
@@ -1297,7 +1339,7 @@ margin-bottom: 1vmin;
 }
 
 .picto-medusa {
-  width: 24vmin;
+  width: 20vmin;
   display: flex;
   justify-content: center;
   align-items: center;
